fixed z-index issue

--- a/gallery.css
+++ b/gallery.css
@@ -21,6 +21,7 @@ div#close{
     position: fixed;
     top: 80px;
     left: 80px;
+    z-index: 101;
 }
 
 
